# fastfuzzy

./: .gitignore  ANALYSIS.md  Cargo.toml  README.md  benchmark_results.json  benchmark_test.py  function_test.py  minimal_debug_test.py  minimal_functionality_test.py  minimal_test.py  pyproject.toml  setup.py  specific_test.py  test_fastfuzzy_updated.py  tox.ini
benches/: my_benchmark.rs
benchmark/: benchmark_comparison.py  benchmark_results.json
examples/: README.md  SUMMARY.md  data_deduplication.py  fuzzy_api_service.py  fuzzy_matcher_demo.py  log_analysis.py  simple_test.py  spell_checker.py  test_fastfuzzy_api.py
src/: basic_levenshtein.rs  bin.rs  damerau.rs  lib.rs  string_matcher.rs  utils.rs
tests/: test_fast_fuzzy_api.py  test_fast_fuzzy_api_fixed.py
