[package]
name = "fastfuzzy"
version = "0.1.0"
authors = ["amiya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
pyo3 = { version = "0.12", features = ["extension-module"] }
strsim = "0.10.0"
regex = "1.4.2"
aho-corasick = "0.7"
ngrams = "1.0.1"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[lib]
name = "fastfuzzy"
crate-type = ["cdylib"]

[[bin]]
name = "bin"
path = "src/bin.rs"